@@ -1,5 +1,8 @@
 2009-02-14 Denton Woods <doomwiz@users.sf.net>
 	* il_blp.c (iLoadBlp1): Support for mipmaps added.
+	* il_gif.h: Moved iCopyPalette declaration out of here into il_internal.h.
+	* il_gif.c: Moved iCopyPalette definition out of here into il_pal.c.
+	
 
 2009-02-13 Denton Woods <doomwiz@users.sf.net>
 	* WindowsTest.cpp: Added slideshows capabilities with Page Up and Page Down.
